fix gap and variables

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,1 +1,3 @@
-$cardGap: 24px
+$card-gap: 40px;
+
+$bg-color-card: #d48f38;
